# Mandelbrot_To_Epsilon

./: .gitignore  CMakeLists.txt  conanfile.txt
doc/: main.tex
shader/: mandelbrot.comp  mandelbrot_fragment.frag  mandelbrot_vertex.vert
src/: camera.c  camera.h  chrono.h  main.c  result.c  result.h  util.h
src/gfx/: default.c  default.h  gfx.c  gfx.h  gfx_util.c  gfx_util.h  mandelbrot_compute_pipeline.c  mandelbrot_compute_pipeline.h  mandelbrot_management.c  mandelbrot_management.h  mandelbrot_render_pipeline.c  mandelbrot_render_pipeline.h
